2004-06-29  Stephen F. Booth  <sbooth@gnu.org>

	* cgicc/Cgicc.cpp: Parse both GET and POST data if present
	* demo/*.cpp: Demos made into stand-alone applications

2004-06-27  Stephen F. Booth  <sbooth@gnu.org>

	* demo/upload.{html,cpp}:Added content redirection for uploads

2004-06-26  Stephen F. Booth  <sbooth@gnu.org>

	* cgicc/Cgicc.{h,cpp}: Added operator() (const std::string&) for
	easier form element access
	* cgicc/Cgicc.{h,cpp}: Added copy constructor and overloaded
	comparison and assignment operators
	* cgicc/CgiEnvironment.{h,cpp}: Added copy constructor and
	overloaded comparison and assignment operators

2004-06-21  Stephen F. Booth  <sbooth@gnu.org>

	* configure.ac: Removed maintainer mode
	* Makefile.am: New gpg targets
	* doc/gnu-head-sm.jpg: New file
	* doc/Makefile.am: Removed maintainer mode
	* doc/index.tmpl: New header
	* doc/cgicc-doc.css: New styles

2004-06-19  Stephen F. Booth  <sbooth@gnu.org>

	* cgicc/Makefile.am: Updated libtool version info

2004-06-12  Stephen F. Booth  <sbooth@gnu.org>

	* support/Makefile.am: Removed mkinstalldirs from EXTRA_DIST
	* configure.ac: Removed extra AC_CANONICAL_HOST
	* configure.ac: Removed CGICC_CHECK_LINK_STDCPP
	* demo/test.html: Changed votes to browsers, friends to authors
	* demo/test.cpp: Changes votes to browsers, friends to authors
	* cgicc/CgiUtils.cpp: Fixed bug for malformed input in
	form_urldecode (bug submitted by hitheat@hotmail.com and
	imaginos@imaginos.net)
	* THANKS: Added Gilbert Fine and Jim Hull

2004-06-11  Stephen F. Booth  <sbooth@gnu.org>

	* BUGS: Created file
	* Makefile.am: Distribute BUGS
	* acinclude.m4: Quote properly
	* doc/bugs.tmpl: Created file
	* doc/lists.tmpl: Created file
	* doc/license.tmpl: Created file
	* doc/demos.tmpl: Created file
	* docs/cgicc-doc.css: Fixed margins for hr.half

2004-06-09  Stephen F. Booth  <sbooth@gnu.org>

	* contrib/FCgiIO.cpp: Removed (amazingly obsolete) refs to CGICCNS

2003-07-13  Stephen F. Booth  <sbooth@gnu.org>
